# Krakenvolution

./: .gitignore  flake.nix
intelligence/: CMakeLists.txt  arm-gcc-toolchain.cmake  cmake_uninstall.cmake  example_conf.yaml
intelligence/include/: CMakeLists.txt  libs.txt  toinclude.txt
intelligence/include/easylogging/: CMakeLists.txt
intelligence/include/ftxui/: CMakeLists.txt
intelligence/include/yaml/: CMakeLists.txt
intelligence/lib/: CMakeLists.txt  topics.hpp
intelligence/lib/config/: CMakeLists.txt  config.cpp  config.hpp  err.hpp
intelligence/lib/messages/: detection.hpp
intelligence/lib/networking/: connection.cpp  connection.hpp  err.cpp  err.hpp
intelligence/lib/nodes/: CMakeLists.txt  node.hpp  node_definitions.hpp  nodes.cpp  nodes.hpp
intelligence/lib/nodes/extensions/remote/: channel.cpp  channel.hpp  channel_linking.cpp  channel_linking.hpp  connection_manager.cpp  connection_manager.hpp  context.hpp  remote.cpp  remote.hpp  subscription_store.cpp  subscription_store.hpp
intelligence/lib/nodes/extensions/remote/sources/tcp/: context.hpp  err.hpp  tcp.cpp  tcp.hpp
intelligence/lib/nodes/extensions/remote/sources/uart/: context.hpp  err.cpp  err.hpp  serial_port.cpp  serial_port.hpp  uart.cpp  uart.hpp
intelligence/lib/nodes/lidar/: context.hpp  lidar.cpp  lidar.hpp
intelligence/lib/nodes/robot/lidar/: context.hpp  ld06.cpp  ld06.hpp  lidar.cpp  lidar.hpp
intelligence/lib/nodes/robot/test/: test.cpp  test.hpp
intelligence/lib/serial/: channel.cpp  channel.hpp  topics.cpp  topics.hpp
intelligence/lib/state_machines/: state_machine.hpp
intelligence/lib/topics/: CMakeLists.txt  topics.cpp  topics.hpp
intelligence/lib/util/: always_false.hpp  generator.hpp  range.hpp  vec2.hpp
intelligence/messages/: CMakeLists.txt  remote.proto  test.proto
intelligence/nodes/: CMakeLists.txt  nodes.hpp  serial_topics.cpp  serial_topics.hpp  topics.hpp
intelligence/nodes/test/: context.hpp  test.cpp  test.hpp
intelligence/src/: CMakeLists.txt  extensions.hpp  logger.hpp  main.cpp  nodes_and_extensions.hpp  prog_info.hpp  sender.cpp  sequencer.cpp  tests.cpp
intelligence/src/flag/: flag.cpp  flag.hpp
intelligence/src/graphics/: CMakeLists.txt  context.hpp  enviroment.cpp  enviroment.hpp  graphics.cpp  graphics.hpp
intelligence/src/graphics/components/: enviroment.cpp  grid.cpp  grid.hpp
intelligence/src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
intelligence/src/run/: CMakeLists.txt  application.cpp  application.hpp  cleanup.cpp  graphics.cpp  logger.hpp  nodes.cpp  options.cpp  parsing.cpp  run.hpp
intelligence/src/run/flag/: CMakeLists.txt  flag.cpp  flag.hpp
intelligence/src/run/graphics/: CMakeLists.txt  context.hpp  graphics.cpp  graphics.cpp~  graphics.hpp
intelligence/src/run/graphics/components/: enviroment.cpp  enviroment.hpp  grid.cpp  grid.hpp
intelligence/src/run/parser/: parser.cpp  parser.hpp
intelligence/src/sender/: CMakeLists.txt  registered_messages.hpp
intelligence/src/sender/networking/: connection.cpp  connection.hpp  err.cpp  err.hpp
intelligence/src/sender/parser/: CMakeLists.txt  parser.cpp  parser.hpp
intelligence/src/sender/tui/: tui.cpp  tui.hpp
intelligence/src/sender/tui/components/: app.cpp  app.hpp  components.hpp  connection.hpp  log_output.hpp  publication.hpp  subscription.hpp
intelligence/src/sender/tui/types/: proto.hpp
intelligence/src/sender/tui/utils/: inputs.hpp  protobuf.hpp
intelligence/src/sequencer/: CMakeLists.txt
intelligence/src/sequencer/parser/: parser.cpp  parser.hpp
intelligence/test/: CMakeLists.txt
intelligence/test/nodes/: test_node.cpp
intelligence/test/state_machine/: test_state_machine.cpp
microcontroller/bridge_lib/: compile_commands.json  dump  nanopb_build.py  platformio.ini  remote.options
microcontroller/bridge_lib/lib/krakenbridge/: library.json
microcontroller/bridge_lib/lib/krakenbridge/src/: bridge.cpp  bridge.hpp  remote.pb.h
microcontroller/bridge_lib/src/: main.cpp
microcontroller/bridge_lib/src/messages/: remote.pb.c  test.pb.c  test.pb.h
